force-app/main/default/objects/Card_Cache__c/Card_Cache__c.object-meta.xml
<CustomObject>
    <description>Form Builder App - Stores temp JSON</description>
    <label>Card Cache</label>
    <nameField>
        <label>Card Cache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Card Cache</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>