force-app/main/default/objects/Card_Cache__c/fields/Application_Cache__c.field-meta.xml
<CustomField>
    <fullName>Application_Cache__c</fullName>
    <label>Application Cache</label>
    <referenceTo>Application_Cache__c</referenceTo>
    <relationshipLabel>Card Cache</relationshipLabel>
    <relationshipName>Card_Cache</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>