force-app/main/default/objects/Card_Cache__c/fields/Card_Meta_Data__c.field-meta.xml
<CustomField>
    <fullName>Card_Meta_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Card Meta Data</label>
    <referenceTo>Card_Meta_Data__c</referenceTo>
    <relationshipLabel>Card Cache</relationshipLabel>
    <relationshipName>Card_Cache</relationshipName>
    <type>Lookup</type>
</CustomField>