force-app/main/default/objects/Card_Cache__c/fields/CardID__c.field-meta.xml
<CustomField>
    <fullName>CardID__c</fullName>
    <displayFormat>CCsche-{000000000}</displayFormat>
    <label>CardID</label>
    <type>AutoNumber</type>
</CustomField>