force-app/main/default/objects/Card_Cache__c/fields/Files__c.field-meta.xml
<CustomField>
    <fullName>Files__c</fullName>
    <description>Used to contain File JSON Strings</description>
    <label>Files</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>