force-app/main/default/objects/Card_Cache__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Application_Cache__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Values__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>